<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LCidadao</string>
    <string name="map_name">Mapa</string>
    <string name="lojas_name">Lojas</string>
    <string name="loja_name">Info Loja</string>
    <string name="balcoes_name">Balcoes</string>
    <string name="balcao_name">Info Balcao</string>
    <string name="servicos_name">Servicos</string>
    <string name="servico_name">Info Servico</string>
    <string name="pesquisa_name">Pesquisa</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="button1">Lojas</string>
    <string name="button2">Balcao</string>
    <string name="button3">Map</string>
    <string name="none"/>
    <string name="infoLojaNome">Nome : </string>
    <string name="infoLojaMorada">Morada : </string>
    <string name="infoLojaCodigoPostal">Codigo Postal :</string>
    <string name="infoLojaDistrito">Distrito :</string>
    <string name="infoLojaConcelho">Concelho :</string>
    <string name="infoLojaTelefone">Telefone : </string>
    <string name="infoLojaBotaoMapa">Go To Mapa</string>
    <string name="infoLojaBotaoBalcoes">Balcoes</string>
    <string name="entidadeNome">Nome :</string>
    <string name="entidadeSigla">Sigla :</string>
    <string name="entidadeMorada">Morada :</string>
    <string name="entidadeTelefone">Telefone :</string>
    <string name="entidadeFax">Fax :</string>
    <string name="entidadeEmail">Email :</string>
    <string name="entidadeURL">URL :</string>
    <string name="entidadeSite">Site :</string>
    <string name="entidadeBotao">Servicos</string>
    <string name="botaoHome">HOME</string>
    <string name="infoServicoNome">Nome :</string>
    <string name="infoServicoDescricao">Descricao :</string>
    <string name="infoServicoTipo">Tipo :</string>
    <string name="infoServicoUrl">URL :</string>
    <string name="pesquisaHintCaseSensitive">Case sensitive</string>
    <string name="pesquisaTextView">Pesquisar por : </string>
    <string name="pesquisaRadioButtonNome">Nome</string>
	<string name="pesquisaRadioButtonMorada">Morada</string>
	<string name="pesquisaRadioButtonConcelho">Concelho</string>
	<string name="pesquisaRadioButtonEntidade">Entidade</string>
	<string name="pesquisaRadioButtonServico">Servico</string>
	<string name="pesquisaSearchButton">Botao de pesquisa</string>
	
</resources>