<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/infoLojaNome" />
            
        <TextView
            android:id="@+id/infoLojaNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/infoLojaMorada" />

        <TextView
            android:id="@+id/infoLojaMorada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/infoLojaCodigoPostal" />

        <TextView
            android:id="@+id/infoLojaCodigoPostal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/infoLojaConcelho" />

        <TextView
            android:id="@+id/infoLojaConcelho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/infoLojaDistrito" />

        <TextView
            android:id="@+id/infoLojaDistrito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/infoLojaTelefone" />

        <TextView
            android:id="@+id/infoLojaTelefone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true" />

    </LinearLayout>
    
    <LinearLayout 
        android:weightSum="100"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <Button 
            android:layout_weight="50"
            android:id="@+id/infoLojaMapa"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/infoLojaBotaoMapa" />
        
        <Button 
            android:layout_weight="50"
            android:id="@+id/infoLojaBalcoes"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/infoLojaBotaoBalcoes" />
    </LinearLayout>

</LinearLayout>
